--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-matplotlib==3.4.3
-pandas==1.3.3
-seaborn==0.11.2
-aiogram==2.15
-psycopg2==2.9.1
+opencv_python==4.5.3.56
+numpy==1.19.5
+pytesseract==0.3.7
+Pillow==8.3.2
+PyQt5==5.15.4
